# src/Infrastructure/Persistence/Repositories/ItemRepository.php
@@ -2,12 +2,11 @@
 
 namespace App\Infrastructure\Persistence\Repositories;
 
+use App\Domain\DTOs\ItemDTO;
 use App\Domain\Entities\Item;
-use App\Domain\Entities\Ticket;
 use DateTime;
 use Doctrine\ORM\EntityManagerInterface;
 use Slim\Psr7\Request;
-use Slim\Psr7\Response;
 
 class ItemRepository
 {
@@ -42,7 +41,7 @@ class ItemRepository
     {
         $builder = $this->entityManager
             ->createQueryBuilder()
-            ->select('i.id', 'i.name', 'i.date')
+            ->select('i.id, i.name, i.statusId, i.ownerId, i.ticketId, i.date, i.sectionId')
             ->from(Item::class, 'i')
             ->where('i.deleted_at IS NULL')
             ->orderBy('i.id', 'ASC');
@@ -55,19 +54,19 @@ class ItemRepository
      *
      * Find Item by ID
      *
-     * @param array $args
+     * @param ItemDTO $itemDTO
      * @return array
      */
-    public function findItemById(array $args): array
+    public function findItemByName(ItemDTO $itemDTO): array
     {
-        $id = $args['id'];
+        $itemDTOName = $itemDTO->getName();
 
         return $this->entityManager
             ->createQueryBuilder()
-            ->select('i.id', 'i.name', 'i.date')
+            ->select('i.id, i.name, i.statusId, i.ownerId, i.ticketId, i.date, i.sectionId')
             ->from(Item::class, 'i')
-            ->where('i.id = :id')
-            ->setParameter(':id', $id)
+            ->where('i.name = :name')
+            ->setParameter(':name', $itemDTOName)
             ->andWhere('i.deleted_at IS NULL')
             ->getQuery()
             ->execute();
@@ -77,27 +76,22 @@ class ItemRepository
     /**
      * Delete Item by id
      *
-     * @param Response $response
-     * @param array $args
-     * @return Response
+     * @param ItemDTO $itemDTO
+     * @return void
      */
-    public function deleteItemById(Response $response, array $args): Response
+    public function deleteItemByName(ItemDTO $itemDTO): void
     {
-        $id = $args['id'];
-        $column = 'i.deleted_at';
-        $value = new DateTime();
+        $itemDTOName = $itemDTO->getName();
 
         $this->entityManager
             ->createQueryBuilder()
             ->update(Item::class, 'i')
-            ->set($column, ':value')
-            ->setParameter(':value', $value)
-            ->where('i.id = :id')
-            ->setParameter(':id', $id)
+            ->set('i.deleted_at', ':value')
+            ->setParameter(':value', new DateTime())
+            ->where('i.name = :name')
+            ->setParameter(':name', $itemDTOName)
             ->getQuery()
             ->execute();
-
-        return $response->withStatus(200, 'Item deleted');
     }
 
 
@@ -105,49 +99,51 @@ class ItemRepository
      * Update Ticket Code
      *
      * @param Request $request
-     * @param Response $response
-     * @return Response
+     * @param ItemDTO $itemDTO
+     * @return Item
      */
-    public function updateItemSubject(Request $request, Response $response): Response
+    public function updateItemName(Request $request, ItemDTO $itemDTO): Item
     {
-        $data = $request->getParsedBody();
+        $itemDTOName = $itemDTO->getName();
+
+        $name = $request->getParsedBody()['name'];
 
         $this->entityManager
             ->createQueryBuilder()
             ->update(Item::class, 'i')
             ->set('i.name', ':value')
-            ->setParameter(':value', $data['name'])
-            ->where('i.id = :id')
-            ->setParameter(':id', $data['id'])
+            ->setParameter(':value', $name)
+            ->where('i.name = :name')
+            ->setParameter(':name', $itemDTOName)
             ->getQuery()
             ->getResult();
 
-        return $response->withStatus(200, 'OK - Item Edited');
+        $this->item->setName($name);
+
+        return $this->item;
     }
 
 
     /**
      *
      * @param Request $request
-     * @param Response $response
-     * @return Response
+     * @return Item
      */
-    public function createNewItem(Request $request, Response $response): Response
+    public function createNewItem(Request $request): Item
     {
-        $data = $request->getParsedBody();
-        $date = new DateTime();
+        $body = $request->getParsedBody();
 
         $this->item = new Item();
-        $this->item->setName($data['name']);
-        $this->item->setDate($date);
-        $this->item->setStatus($data['status_id']);
-        $this->item->setOwner($data['owner_id']);
-        $this->item->setSectionsId($data['sections_id']);
-        $this->item->setTicketsId($data['tickets_id']);
+        $this->item->setName($body['name']);
+        $this->item->setDate(new DateTime("now"));
+        $this->item->setStatusId($body['statusId']);
+        $this->item->setOwnerId($body['ownerId']);
+        $this->item->setSectionId($body['sectionId']);
+        $this->item->setTicketId($body['ticketId']);
 
         $this->entityManager->persist($this->item);
         $this->entityManager->flush();
 
-        return $response->withStatus(201, 'OK - Item Created');
+        return $this->item;
     }
 }
